# iffi

./: Cargo.toml  README.md
iffi-macro/: Cargo.toml
iffi-macro/src/: lib.rs
macros/: Cargo.toml
macros/src/: attrs.rs  lib.rs  nicheless.rs
src/: alloc_bits.rs  error.rs  impls.rs  lib.rs  maybe_invalid.rs  niche.rs  nostd_bits.rs
